@@ -14,11 +14,11 @@ DDDD;
 var_dump(token_get_all($str));
 ?>
 --EXPECTF--
-array(17) {
+array(19) {
   [0]=>
   array(2) {
     [0]=>
-    int(%d)
+    int(367)
     [1]=>
     string(6) "<?php
 "
@@ -26,7 +26,7 @@ array(17) {
   [1]=>
   array(2) {
     [0]=>
-    int(%d)
+    int(309)
     [1]=>
     string(2) "$x"
   }
@@ -35,7 +35,7 @@ array(17) {
   [3]=>
   array(2) {
     [0]=>
-    int(%d)
+    int(371)
     [1]=>
     string(6) "<<<DD
 "
@@ -43,7 +43,7 @@ array(17) {
   [4]=>
   array(2) {
     [0]=>
-    int(%d)
+    int(307)
     [1]=>
     string(13) "jhdsjkfhjdsh
 "
@@ -51,67 +51,83 @@ array(17) {
   [5]=>
   array(2) {
     [0]=>
-    int(%d)
+    int(372)
     [1]=>
     string(2) "DD"
   }
   [6]=>
-  string(1) "."
-  [7]=>
   array(2) {
     [0]=>
-    int(%d)
-    [1]=>
-    string(2) """"
-  }
-  [8]=>
-  string(1) ";"
-  [9]=>
-  array(2) {
-    [0]=>
-    int(%d)
+    int(370)
     [1]=>
     string(1) "
 "
   }
+  [7]=>
+  string(1) "."
+  [8]=>
+  array(2) {
+    [0]=>
+    int(315)
+    [1]=>
+    string(2) """"
+  }
+  [9]=>
+  string(1) ";"
   [10]=>
   array(2) {
     [0]=>
-    int(%d)
+    int(370)
+    [1]=>
+    string(1) "
+"
+  }
+  [11]=>
+  array(2) {
+    [0]=>
+    int(309)
     [1]=>
     string(2) "$a"
   }
-  [11]=>
-  string(1) "="
   [12]=>
-  array(2) {
-    [0]=>
-    int(%d)
-    [1]=>
-    string(8) "<<<DDDD
-"
-  }
+  string(1) "="
   [13]=>
   array(2) {
     [0]=>
-    int(%d)
+    int(371)
     [1]=>
-    string(13) "jhdsjkfhjdsh
+    string(8) "<<<DDDD
 "
   }
   [14]=>
   array(2) {
     [0]=>
-    int(%d)
+    int(307)
+    [1]=>
+    string(13) "jhdsjkfhjdsh
+"
+  }
+  [15]=>
+  array(2) {
+    [0]=>
+    int(372)
     [1]=>
     string(4) "DDDD"
   }
-  [15]=>
-  string(1) ";"
   [16]=>
+  string(1) ";"
+  [17]=>
   array(2) {
     [0]=>
-    int(%d)
+    int(370)
+    [1]=>
+    string(1) "
+"
+  }
+  [18]=>
+  array(2) {
+    [0]=>
+    int(369)
     [1]=>
     string(2) "?>"
   }
